# image-to-ascii

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
image_2_ascii/: i2a.py
tests/: logo_default.txt  logo_noresize.txt  logo_reversed.txt  test_image_2_ascii.py
