[tool.poetry]
name = "image-2-ascii"
version = "0.1.0"
description = ""
authors = ["bartosz121 <bmagiera121@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
Pillow = "^8.3.2"
numpy = "^1.21.2"
typer = "^0.4.0"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
